--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,6 @@
-h1 {
-  color: red;
-}
+@import "scaffolding.scss";
+@import "blocks/logo.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/info-contacts.scss";
