--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,6 @@
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
 @import "blocks/info-contacts.scss";
+@import "blocks/promo.scss";
+@import "blocks/page-main.scss";
+@import "blocks/offers.scss";
