--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,7 @@
 @import "blocks/promo.scss";
 @import "blocks/page-main.scss";
 @import "blocks/offers.scss";
+@import "blocks/slider.scss";
+@import "blocks/review.scss";
+@import "blocks/prices.scss";
+
