--- a/source/sass/blocks/info-contacts.scss
+++ b/source/sass/blocks/info-contacts.scss
@@ -4,8 +4,13 @@
 
 .info-contacts__tel {
   display: block;
-  padding-top: 35px;
-  padding-bottom: 35px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 38px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: 55px;
+
+  font-size: 18px;
+  line-height: 32px;
+  color: #fe7865;
 }
