--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -15,9 +15,25 @@
 
 .site-list__link {
   display: block;
-  padding-top: 35px;
+  padding-top: 44px;
   padding-bottom: 35px;
-  padding-left: 45px;
-  padding-right: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
   text-decoration: none;
+
+  font-size: 14px;
+  font-style: normal;
+  line-height: 17px;
+  font-weight: 500;
+  color: #141517;
+}
+
+.site-list__link[href] {
+  &:hover {
+    color: #fe7865;
+  }
+
+  &:active {
+    color: #fe7865;
+  }
 }
