--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,5 @@
 @import "blocks/slider.scss";
 @import "blocks/review.scss";
 @import "blocks/prices.scss";
+@import "blocks/service-list.scss";
 
