--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   flex-direction: row;
+  margin-top: 50px;
 }
 
 .slider__toggle {
@@ -20,10 +21,39 @@
 }
 
 .slider__info {
+  position: relative;
+
   width: 370px;
+  margin-left: 10px;
+}
+
+.slider__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 55px;
+  line-height: 90px;
+  letter-spacing: -1.245px;
+  color: #2c2e3f;
+}
+
+.slider__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+
+  letter-spacing: -0.466667px;
+
+  color: rgba(44, 46, 63, 0.7);
+}
+
+.slider__img {
+  margin-top: 30px;
+  margin-left: 100px;
 }
 
 .slider__block {
   position: absolute;
-  right: 0px;
+  top: 150px;
+  right: 20px;
 }
