--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,4 +11,7 @@
 @import "blocks/review.scss";
 @import "blocks/prices.scss";
 @import "blocks/service-list.scss";
+@import "blocks/page-footer.scss";
+
+
 
