--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,4 +4,18 @@
 
   display: flex;
   flex-direction: row;
+  margin-bottom: 150px;
+}
+
+.page-footer__offers {
+  width: 40%;
+  margin-left: 30px;
+}
+
+.page-footer__contacts {
+  width: 30%;
+}
+
+.page-footer__corporate {
+  width: 30%;
 }
