--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -1,9 +1,49 @@
 .prices {
   display: flex;
   flex-direction: row;
+
+  margin-bottom: 140px;
 }
 
 .prices__info {
   width: 299px;
   order: 1;
+  margin-left: 90px;
+  margin-top: 70px;
+}
+
+.prices__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: rgba(44, 46, 63, 0.7);
+  margin-bottom: 60px;
+}
+
+.prices__title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 55px;
+  line-height: 90px;
+  color: #2c2e3f;
+}
+
+.prices__contact {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 34px;
+
+  color: #141517;
+}
+
+.prices__tel {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+
+  color: #000000;
 }
