--- a/source/sass/blocks/service-list.scss
+++ b/source/sass/blocks/service-list.scss
@@ -1,13 +1,14 @@
 .service-list {
   position: relative;
+  min-height: 672px;
 
   background: #ffffff;
   border: 1px solid rgba(44, 46, 63, 0.3);
   box-sizing: border-box;
   border-radius: 6px;
   width: 370px;
-  margin-right: 30px;
-  margin-left: 10px;
+  margin-right: 19px;
+  margin-left: 13px;
 }
 
 .service-list__title {
@@ -23,11 +24,13 @@
   color: rgba(20, 21, 23, 0.7);
 
   margin-left: 30px;
+  margin-bottom: 45px;
+  padding-top: 10px;
 }
 
 .service-list__cost {
   position: absolute;
-  top: 30px;
+  top: 40px;
   right: 30px;
   font-size: 25px;
   line-height: 34px;
@@ -47,4 +50,24 @@
 
   color: #2c2e3f;
   margin-left: 30px;
+  margin-bottom: 60px;
+}
+
+.service-list__item {
+  list-style: none;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 32px;
+
+  color: #2c2e3f;
+  margin-bottom: 15px;
+  margin-left: 15px;
+  margin-right: 40px;
+}
+
+.service-list__button {
+  position: absolute;
+  border: none;
+  bottom: 30px;
+  right: 30px;
 }
