--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -16,6 +16,10 @@
   letter-spacing: -0.415px;
   text-align: center;
 
+  padding-right: 50px;
+  margin-right: 30px;
+  margin-left: 15px;
+
   border: 0;
   background-color: #ffffff;
 }
@@ -23,7 +27,7 @@
 .slider__info {
   position: relative;
 
-  width: 370px;
+  width: 30%;
   margin-left: 10px;
 }
 
@@ -45,6 +49,7 @@
   letter-spacing: -0.466667px;
 
   color: rgba(44, 46, 63, 0.7);
+  margin-bottom: 50px;
 }
 
 .slider__img {
@@ -56,4 +61,8 @@
   position: absolute;
   top: 150px;
   right: 20px;
+}
+
+.slider__button {
+  border: none;
 }
