--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,6 @@
 @import "blocks/review.scss";
 @import "blocks/prices.scss";
 @import "blocks/service-list.scss";
+@import "blocks/feedback.scss";
 @import "blocks/page-footer.scss";
-
-
-
+@import "blocks/more-offers.scss";
