--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -46,3 +46,13 @@
 
   margin-bottom: 40px;
 }
+
+.promo__button {
+  position: relative;
+}
+
+.promo__icon {
+  position: absolute;
+  top: 31px;
+  right: 40px;
+}
