--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,4 @@
 @import "blocks/feedback.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/more-offers.scss";
+@import "blocks/author.scss";
