--- a/source/sass/blocks/info-contacts.scss
+++ b/source/sass/blocks/info-contacts.scss
@@ -1,4 +1,5 @@
 .info-contacts {
+  position: relative;
   display: flex;
 }
 
@@ -13,4 +14,18 @@
   font-size: 18px;
   line-height: 32px;
   color: #fe7865;
+}
+
+.info-contacts__icon {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 40px;
+  left: 40px;
+}
+
+@media (max-width: 1024px) {
+  .info-contacts {
+    display: none;
+  }
 }
