--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -3,6 +3,7 @@
   align-self: center;
   margin-top: 18px;
   margin-bottom: 18px;
+  margin-left: 40px;
   padding: 2px 25px 0 15px;
   width: 100px;
 }
