--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -6,5 +6,74 @@
 
 .main-nav__list {
   display: flex;
-
 }
+
+.main-nav__toggle {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .main-nav__wrapper {
+    position: absolute;
+
+    top: 20px;
+  }
+
+
+  .main-nav__toggle {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 2;
+
+    display: block;
+    width: 72px;
+    height: 50px;
+
+    background-color: #fe7865;
+
+    cursor: pointer;
+    border: none;
+  }
+
+  .main-nav--closed .main-nav__toggle::before {
+    content: "";
+
+    position: absolute;
+    top: 15px;
+    left: 25px;
+
+    width: 22.5px;
+    height: 1px;
+
+    background-color: #ffffff;
+    box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+  }
+
+  .main-nav--opened .main-nav__toggle {
+    &::before,
+    &::after {
+      content: "";
+
+      position: absolute;
+      top: 25px;
+      left: 12px;
+
+      width: 30px;
+      height: 2px;
+
+      background-color: #221f1f;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+      box-shadow: none;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
+}
+
+
