--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -38,3 +38,14 @@
     color: #fe7865;
   }
 }
+
+
+@media (max-width: 1024px) {
+  .site-list {
+    display: flex;
+    flex-direction: column;
+
+    width: 320px;
+    background-color: #ffffff;
+  }
+}
