--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -3,10 +3,12 @@
 
   display: flex;
   flex-direction: row;
-  margin-top: 50px;
+  margin-top: 42px;
+  margin-left: 5px;
 }
 
 .slider__toggle {
+
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -16,12 +18,26 @@
   letter-spacing: -0.415px;
   text-align: center;
 
-  padding-right: 50px;
-  margin-right: 30px;
-  margin-left: 15px;
-
   border: 0;
   background-color: #ffffff;
+
+}
+
+.slider__toggles {
+  border-bottom: 1px solid rgba(44, 46, 63, 0.3);
+  padding-bottom: 15px;
+  margin-top: 12px;
+  box-sizing: border-box;
+  width: 899px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  margin-left: 15px;
+}
+
+.slider__toggle--active {
+  color: #fe7865;
 }
 
 .slider__info {
@@ -32,12 +48,26 @@
 }
 
 .slider__title {
+  position: relative;
   font-style: normal;
   font-weight: 600;
   font-size: 55px;
   line-height: 90px;
   letter-spacing: -1.245px;
   color: #2c2e3f;
+}
+
+.slider__title::before {
+  content: "";
+
+  position: absolute;
+  bottom: -18px;
+  left: 0px;
+
+  width: 175px;
+  height: 3px;
+
+  background-color: #fe7865;
 }
 
 .slider__text {
@@ -53,14 +83,14 @@
 }
 
 .slider__img {
-  margin-top: 30px;
-  margin-left: 100px;
+  margin-top: 36px;
+  margin-left: 111px;
 }
 
 .slider__block {
   position: absolute;
   top: 150px;
-  right: 20px;
+  right: 16px;
 }
 
 .slider__button {
