--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,6 @@
 @import "blocks/page-footer.scss";
 @import "blocks/more-offers.scss";
 @import "blocks/author.scss";
+@import "blocks/contacts.scss";
+@import "blocks/corporate-travel.scss";
+
