--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,21 +1,24 @@
-.page-footer__wrapper {
-  max-width: 1200px;
+.page-footer {
+  max-width: 1920px;
   margin: 0 auto;
+}
 
+.page-footer__wrapper {
   display: flex;
   flex-direction: row;
   margin-bottom: 150px;
+  margin-left: 50px;
+  justify-content: flex-start;
 }
 
 .page-footer__offers {
-  width: 40%;
-  margin-left: 30px;
+  width: 30%;
 }
 
 .page-footer__contacts {
-  width: 30%;
+  width: 23%;
 }
 
 .page-footer__corporate {
-  width: 30%;
+  width: 25%;
 }
