--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -1,8 +1,10 @@
 .prices {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
 
   margin-bottom: 140px;
+  margin-left: 50px;
 }
 
 .prices__info {
@@ -22,6 +24,7 @@
 }
 
 .prices__title {
+  position: relative;
   font-style: normal;
   font-weight: 600;
   font-size: 55px;
@@ -29,21 +32,42 @@
   color: #2c2e3f;
 }
 
+.prices__title::before {
+  position: absolute;
+  content: "";
+
+  height: 3px;
+  width: 175px;
+
+  bottom: -18px;
+  left: 0px;
+
+  background-color: #fe7865;
+}
+
 .prices__contact {
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
   line-height: 34px;
-
+  text-align: center;
   color: #141517;
+  margin-bottom: 10px;
 }
 
 .prices__tel {
+  position: relative;
   text-decoration: none;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 32px;
+  margin-left: 50px;
 
   color: #000000;
+}
+
+.prices__icon {
+  position: absolute;
+  left: -60px;
 }
