--- a/source/sass/blocks/service-list.scss
+++ b/source/sass/blocks/service-list.scss
@@ -35,6 +35,10 @@
   padding-top: 10px;
 }
 
+.service-list:hover .service-list__title {
+  color: #fe7865;
+}
+
 .service-list__cost {
   position: absolute;
   top: 40px;
@@ -50,6 +54,10 @@
   color: rgba(20, 21, 23, 0.7);
 }
 
+.service-list:hover .service-list__cost {
+  color: #fe7865;
+}
+
 .service-list__text {
   font-weight: normal;
   font-size: 16px;
@@ -57,10 +65,18 @@
 
   color: #2c2e3f;
   margin-left: 30px;
-  margin-bottom: 60px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid rgba(44, 46, 63, 0.3);
+}
+
+.service-list:hover .service-list__text {
+  border-bottom: 1px solid #fe7865;;
 }
 
 .service-list__item {
+  position: relative;
   list-style: none;
   font-weight: normal;
   font-size: 16px;
@@ -72,9 +88,29 @@
   margin-right: 40px;
 }
 
+.service-list__item::before {
+  position: absolute;
+  content: "";
+  left: -25px;
+  top: 8px;
+
+  height: 20px;
+  width: 15px;
+
+  background-image: url("../img/icon-tick-red.svg");
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+}
+
+.service-list:hover .service-list__item::before {
+  background-image: url("../img/icon-tick-black.svg");
+}
+
 .service-list__button {
+  display: block;
   position: absolute;
   border: none;
   bottom: 30px;
-  right: 30px;
+  right: 35px;
+  width: 80%;
 }
