Table: header, promo

--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -7,3 +7,12 @@
   padding: 2px 25px 0 15px;
   width: 100px;
 }
+
+@media (max-width: 1024px) {
+  .logo {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    margin-top: 13px;
+  }
+}
