--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -6,6 +6,7 @@
 .page-footer__wrapper {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-bottom: 150px;
   margin-left: 50px;
   justify-content: flex-start;
