--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -6,3 +6,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@media (max-width: 1024px) {
+  .page-header__wrapper {
+    min-height: 50px;
+  }
+}
