--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -56,3 +56,55 @@
   top: 31px;
   right: 40px;
 }
+
+@media (max-width: 1024px) {
+  .promo {
+    background-image: url("../img/promo-table.jpg");
+    background-repeat: no-repeat;
+    background-position: center 0;
+    background-size: auto 450px;
+    min-height: 450px;
+
+    margin-bottom: 55px;
+  }
+
+  .promo__wrapper {
+    min-height: 450px;
+  }
+
+  .promo__info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: center;
+    margin-top: 80px;
+    align-content: center;
+  }
+
+  .promo__title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 150%;
+
+    text-align: center;
+  }
+
+  .promo__description {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 170%;
+
+    text-align: center;
+
+    width: 50%;
+    align-self: center;
+  }
+
+  .promo__button {
+    align-self: center;
+  }
+
+}
