Table: prices, footer

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -74,3 +74,9 @@
   background-repeat: no-repeat;
   background-position: 0px 0px;
 }
+
+@media (max-width: 1024px) {
+  .contacts::before {
+    display: none;
+  }
+}
