--- a/source/sass/blocks/more-offers.scss
+++ b/source/sass/blocks/more-offers.scss
@@ -37,3 +37,9 @@
   color: rgba(20, 21, 23, 0.5);
   margin-bottom: 10px;
 }
+
+@media (max-width: 1024px) {
+  .more-offers__list {
+    margin-right: 30px;
+  }
+}
