--- a/source/sass/blocks/service-list.scss
+++ b/source/sass/blocks/service-list.scss
@@ -114,3 +114,36 @@
   right: 35px;
   width: 80%;
 }
+
+@media (max-width: 1024px) {
+  .service-list {
+    display: flex;
+    flex-direction: column;
+    width: 288px;
+  }
+
+  .service-list__title {
+    text-align: center;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 34px;
+    align-self: center;
+    margin-left: 0px;
+  }
+
+  .service-list__cost {
+    top: 70px;
+    right: 35%;
+  }
+
+  .service-list__text {
+    text-align: center;
+
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .service-list__list {
+    margin-bottom: 120px;
+  }
+}
