--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -8,7 +8,6 @@
 }
 
 .slider__toggle {
-
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -32,6 +31,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   margin-left: 50px;
 }
@@ -115,4 +115,74 @@
 
 .slider__button {
   border: none;
+}
+
+@media (max-width: 1024px) {
+  .slider__toggles  {
+    width: 90%;
+  }
+
+  .slider__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .slider__wrapper--albania {
+    display: none;
+  }
+
+  .slider__wrapper--macedonia {
+    display: none;
+  }
+
+  .slider__wrapper--montenegro {
+    display: none;
+  }
+
+  .slider__wrapper--croatia {
+    display: none;
+  }
+
+  .slider__info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    box-sizing: border-box;
+    margin-right: 50px;
+    margin-bottom: 50px;
+  }
+
+  .slider__title {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 150%;
+
+    text-align: center;
+  }
+
+  .slider__title::before {
+    display: none;
+  }
+
+  .slider__text {
+    text-align: center;
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .slider__img {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
+
+  .slider__block {
+    display: flex;
+    /*position: relative;*/
+    top: 600px;
+    bottom: 0px;
+    right: calc(50% - 190px);
+  }
 }
